--- a/test.config
+++ b/test.config
@@ -3,22 +3,28 @@ units real
 
 #slide 42
 boundary p p p
+atom_style full
+read_data lmp.data
 
 #slide 43
-atom_style full
+
 bond_style harmonic
 angle_style charmm
 dihedral_style charmm
 improper_style harmonic
-special_bonds charmm
-pair_style lj/charmm/coul/long 10 12
+pair_style lj/cut 2.5
+pair_coeff 3 3 0.02 1.78
+pair_coeff 5 5 0.2  2.85
+pair_coeff 4 4 0.02 1.78
+pair_coeff 1 1 0.12 3.30
+pair_coeff 6 6 0.27 3.59
+pair_coeff 2 2 0.013 2.32
 pair_modify mix arithmetic
-kspace_style pppm 0.0001
-neigh_modify delay 1 every 1 check yes
+# kspace_style pppm 0.0001
+# kspace_modify gewald
+neigh_modify delay 1 every 1 check yes one 200
+bond_coeff 1 0 0
 
-#slide 51
-#read data-file:
-read_data solvate.data
 #make folder for the results:
 variable results string "simulation_results"
 variable el_results string "simulation_results_el"
@@ -40,9 +46,3 @@ unfix 1
 fix 1 all npt temp 300.0 300.0 100 iso 1.0 1.0 1000 
 run 5000
 unfix 1
-
-#initialization for md
-reset_timestep 0
-fix main_fix all npt temp 300.0 300.0 100 iso 1.0 1.0 1000
-group hydrogens type 1
-group oxygens type 2
