--- a/test.config
+++ b/test.config
@@ -1,48 +1,52 @@
-#slide 41
 units real
-
-#slide 42
 boundary p p p
 atom_style full
 read_data lmp.data
-
-#slide 43
 
 bond_style harmonic
 angle_style charmm
 dihedral_style charmm
 improper_style harmonic
-pair_style lj/cut 2.5
-pair_coeff 3 3 0.02 1.78
+pair_style lj/cut/coul/long 5
+# 1  C
+# 2  Fe
+# 3  H
+# 4  N
+# 5  O
+# 6  S
+pair_coeff 3 3 0.2 2.846
 pair_coeff 5 5 0.2  2.85
-pair_coeff 4 4 0.02 1.78
+pair_coeff 4 4 0.17 3.250
 pair_coeff 1 1 0.12 3.30
 pair_coeff 6 6 0.27 3.59
 pair_coeff 2 2 0.013 2.32
 pair_modify mix arithmetic
 # kspace_style pppm 0.0001
 # kspace_modify gewald
-neigh_modify delay 1 every 1 check yes one 200
+neigh_modify delay 1 every 1 check yes one 2000
 bond_coeff 1 0 0
 
 #make folder for the results:
 variable results string "simulation_results"
 variable el_results string "simulation_results_el"
+shell rmdir ${results}
 shell mkdir ${results}
 shell cd ${results}
 
-#slide 52
-thermo_style custom step temp press lx ke pe etotal density
-thermo          100
+region ligand_region block 48.9 50.1 -42.1 -41.9 12.9 14.7 #xlo xhi ylo yhi zlo zhi
+group ligand_group region ligand_region
+set group ligand_group charge -0.5
+
+set type 2 charge 50000
+
+dump 1 all custom 100 dmp.*.txt id type x y z mass
+
+#thermo_style custom step temp press lx ke pe etotal density
+#thermo          100
 #energy minimisation:
 minimize 0.0 0.0 1000 10000
 velocity all create 300.0 1234567 mom yes rot yes dist gaussian
-#equilibration at NVT:
-fix 1 all nvt temp 300.0 300.0 100 
-timestep 0.001
-run 2000
-unfix 1
-#equilibration at NpT:
-fix 1 all npt temp 300.0 300.0 100 iso 1.0 1.0 1000 
-run 5000
-unfix 1
+#equilibration at NVE:
+fix 1 all nve
+timestep 0.1
+run 10000
