--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 hw_sim/
-simulation_results/
+simulation_results_1/
+simulation_results_2/
+simulation_results_3/
+simulation_results_4/
+simulation_results_5/
+simulation_results_6/
+simulation_results_7/
